Fix layout: center search form, tighten nav spacing, enlarge logo, fix Buy Now/Book Now links

--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,8 @@ html, body {
 
 .hero-header > ul {
   display: flex;
-  justify-content: space-between;
+    justify-content: center;
+    gap: 30px;
   align-items: center;
   transition: 0.4s ease;
 }
@@ -104,8 +105,8 @@ html, body {
 }
 .logo {
   display: block;
-  width: 150px;   /* set your logo width */
-  height: 62px;    /* set your logo height */
+  width: 220px;   /* set your logo width */
+  height: 90px;    /* set your logo height */
   /* background-image: url('./image/logo.png'); */
   background-size: contain;
   background-repeat: no-repeat;
@@ -176,7 +177,8 @@ html, body {
 .button-container {
   width: 92%;
   min-height: 27vh;
-  margin-left: 60px;
+    margin-left: auto;
+    margin-right: auto;
   margin-top: 90px;
   border-radius: 20px;
   background-color: #fafafa;
@@ -2057,7 +2059,7 @@ footer {
 }
 
 .footer-logo img {
-  width: 150px;
+  width: 220px;
   height: auto;
   object-fit: contain;
   border-radius: 10px;
@@ -2266,7 +2268,7 @@ header ul li a:hover{
 }
 
 .logo{
-    width: 150px;
+    width: 220px;
     height: 150px;
     /* border: 1px solid red; */
     background-image: url(../image/6fe57389916ebe8b674628caacb1bc7f982a4e59.png);
